test_src/compiler_errors/types/boolean/GreaterThanOrEqualToBoolError1.b
class GreaterThanOrEqualToBoolError1 {
    void test() {
        println(1 >= false);
    }
}
